--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.0.1
 homepage: https://github.com/griajobag/simple_calendar_event
 
 environment:
-  sdk: '>=2.18.0-165.1.beta <3.0.0'
+  sdk: '>=2.18.0 <3.0.0'
   flutter: ">=1.17.0"
 
 dependencies:
